Initial commit, V1.0 done

--- a/index.html
+++ b/index.html
@@ -11,10 +11,27 @@
 		<!-- Styles -->
 		<link rel="stylesheet" href="css/app.css">
 
-		<title>Website Template</title>
+		<title>Cat Clicker</title>
 	</head>
 	<body>
-		<h1>Website Template</h1>
+		<div class="container entire">
+			<div class="row justify-content-center">
+				<div class="col-6 text-center">
+					<h1 class="display-2">Cat Clicker</h1>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="col-4 counter-div text-center">
+					<h4 class="display-4" id="counter">0</h4>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="col-8 kitteh-img-div text-center">
+					<img src="img/kitteh.jpeg" id="kitteh-img" alt="">
+				</div>
+			</div>
+		</div>
+
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
