--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
 					<h4 class="display-4" id="counter">0</h4>
 				</div>
 			</div>
-			<div class="row justify-content-center">
-				<div class="col-8 kitteh-img-div text-center">
-					<img src="img/kitteh.jpeg" id="kitteh-img" alt="">
+			<div class="row justify-content-center kitteh-img-row">
+				<div class="col-5 kitteh-one-div text-center">
+					<h4 class="display-4" id="kitteh-one-name"></h4>
+					<img src="img/kitteh.jpeg" class="kitteh-img" alt="">
+				</div>
+				<div class="col-5 kitteh-two-div text-center">
+					<h4 class="display-4" id="kitteh-two-name"></h4>
+					<img src="img/kittehtwo.jpg" class="kitteh-img" alt="">
 				</div>
 			</div>
 		</div>
