--- a/index.html
+++ b/index.html
@@ -21,18 +21,20 @@
 				</div>
 			</div>
 			<div class="row justify-content-center">
-				<div class="col-4 counter-div text-center">
-					<h4 class="display-4" id="counter">0</h4>
+				<div class="col-8 counter-div text-center">
+					<h4 class="display-4" id="totalCounter">0</h4>
 				</div>
 			</div>
 			<div class="row justify-content-center kitteh-img-row">
 				<div class="col-5 kitteh-one-div text-center">
 					<h4 class="display-4" id="kitteh-one-name"></h4>
-					<img src="img/kitteh.jpeg" class="kitteh-img" alt="">
+					<h4 class="display-4" id="firstCounter">0</h4>
+					<img src="img/kitteh.jpeg" class="kitteh-img" id="kitteh-img-one" alt="">
 				</div>
 				<div class="col-5 kitteh-two-div text-center">
 					<h4 class="display-4" id="kitteh-two-name"></h4>
-					<img src="img/kittehtwo.jpg" class="kitteh-img" alt="">
+					<h4 class="display-4" id="secondCounter">0</h4>
+					<img src="img/kittehtwo.jpg" class="kitteh-img" id="kitteh-img-two" alt="">
 				</div>
 			</div>
 		</div>
