HTML layout in place, minus text within images

--- a/index.html
+++ b/index.html
@@ -15,30 +15,26 @@
 	</head>
 	<body>
 		<div class="container entire">
-			<div class="row justify-content-center">
+			<div class="row justify-content-center header-row">
 				<div class="col-6 text-center">
 					<h1 class="display-2">Cat Clicker</h1>
 				</div>
 			</div>
 			<div class="row justify-content-center">
-				<div class="col-8 counter-div text-center">
-					<h4 class="display-4" id="totalCounter">0</h4>
+				<div class="col-3 img-list-div">
+					<ul class="img-list">
+						<li class="img-list-item"><img src="img/kitteh.jpeg" alt=""></li>
+						<li class="img-list-item"><img src="img/kittehtwo.jpg" alt=""></li>
+						<li class="img-list-item"><img src="img/kittehthree.jpg" alt=""></li>
+						<li class="img-list-item"><img src="img/kittehfour.jpg" alt=""></li>
+						<li class="img-list-item"><img src="img/kittehfive.jpg" alt=""></li>
+					</ul>
 				</div>
-			</div>
-			<div class="row justify-content-center kitteh-img-row">
-				<div class="col-5 kitteh-one-div text-center">
-					<h4 class="display-4" id="kitteh-one-name"></h4>
-					<h4 class="display-4" id="firstCounter">0</h4>
-					<img src="img/kitteh.jpeg" class="kitteh-img" id="kitteh-img-one" alt="">
-				</div>
-				<div class="col-5 kitteh-two-div text-center">
-					<h4 class="display-4" id="kitteh-two-name"></h4>
-					<h4 class="display-4" id="secondCounter">0</h4>
-					<img src="img/kittehtwo.jpg" class="kitteh-img" id="kitteh-img-two" alt="">
+				<div class="col-9 text-center img-display-div">
+					<img src="img/kitteh.jpeg" class="img-display" alt="">
 				</div>
 			</div>
 		</div>
-
 
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
