Added text over images

--- a/index.html
+++ b/index.html
@@ -23,11 +23,31 @@
 			<div class="row justify-content-center">
 				<div class="col-3 img-list-div">
 					<ul class="img-list">
-						<li class="img-list-item"><img src="img/kitteh.jpeg" alt=""></li>
-						<li class="img-list-item"><img src="img/kittehtwo.jpg" alt=""></li>
-						<li class="img-list-item"><img src="img/kittehthree.jpg" alt=""></li>
-						<li class="img-list-item"><img src="img/kittehfour.jpg" alt=""></li>
-						<li class="img-list-item"><img src="img/kittehfive.jpg" alt=""></li>
+						<li class="img-list-item">
+							<p class="lead img-list-name">Tiger</p>
+							<p class="lead img-list-count">0</p>
+							<img src="img/kitteh.jpeg" alt="">
+						</li>
+						<li class="img-list-item">
+							<p class="lead img-list-name">Sirena</p>
+							<p class="lead img-list-count">0</p>
+							<img src="img/kittehtwo.jpg" alt="">
+						</li>
+						<li class="img-list-item">
+							<p class="lead img-list-name">Sammie</p>
+							<p class="lead img-list-count">0</p>
+							<img src="img/kittehthree.jpg" alt="">
+						</li>
+						<li class="img-list-item">
+							<p class="lead img-list-name">Ninja</p>
+							<p class="lead img-list-count">0</p>
+							<img src="img/kittehfour.jpg" alt="">
+						</li>
+						<li class="img-list-item">
+							<p class="lead img-list-name">Oliver</p>
+							<p class="lead img-list-count">0</p>
+							<img src="img/kittehfive.jpg" alt="">
+						</li>
 					</ul>
 				</div>
 				<div class="col-9 text-center img-display-div">
