--- a/index.html
+++ b/index.html
@@ -26,32 +26,32 @@
 						<li class="img-list-item">
 							<p class="lead img-list-name">Tiger</p>
 							<p class="lead img-list-count">0</p>
-							<img src="img/kitteh.jpeg" alt="">
+							<img src="img/kitteh.jpeg" id="img-one" alt="" onclick="imgSwap(this);">
 						</li>
 						<li class="img-list-item">
 							<p class="lead img-list-name">Sirena</p>
 							<p class="lead img-list-count">0</p>
-							<img src="img/kittehtwo.jpg" alt="">
+							<img src="img/kittehtwo.jpg" id="img-two" alt="" onclick="imgSwap(this);">
 						</li>
 						<li class="img-list-item">
 							<p class="lead img-list-name">Sammie</p>
 							<p class="lead img-list-count">0</p>
-							<img src="img/kittehthree.jpg" alt="">
+							<img src="img/kittehthree.jpg" id="img-three" alt="" onclick="imgSwap(this);">
 						</li>
 						<li class="img-list-item">
 							<p class="lead img-list-name">Ninja</p>
 							<p class="lead img-list-count">0</p>
-							<img src="img/kittehfour.jpg" alt="">
+							<img src="img/kittehfour.jpg" id="img-four" alt="" onclick="imgSwap(this);">
 						</li>
 						<li class="img-list-item">
 							<p class="lead img-list-name">Oliver</p>
 							<p class="lead img-list-count">0</p>
-							<img src="img/kittehfive.jpg" alt="">
+							<img src="img/kittehfive.jpg" id="img-five" alt="" onclick="imgSwap(this);">
 						</li>
 					</ul>
 				</div>
 				<div class="col-9 text-center img-display-div">
-					<img src="img/kitteh.jpeg" class="img-display" alt="">
+					<img src="img/kitteh.jpeg" class="img-display" id="img-display-id" alt="">
 				</div>
 			</div>
 		</div>
