Added text over display image

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
 					</ul>
 				</div>
 				<div class="col-9 text-center img-display-div">
+					<h4 class="display-4 img-display-name">Ninja</h4>
+					<h4 class="display-4 img-display-count">0</h4>
 					<img src="img/kitteh.jpeg" class="img-display" id="img-display-id" alt="">
 				</div>
 			</div>
