Finally able to get name and number over to big picture

--- a/index.html
+++ b/index.html
@@ -23,36 +23,36 @@
 			<div class="row justify-content-center">
 				<div class="col-3 img-list-div">
 					<ul class="img-list">
-						<li class="img-list-item">
+						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Tiger</p>
 							<p class="lead img-list-count">0</p>
 							<img src="img/kitteh.jpeg" id="img-one" alt="" onclick="imgSwap(this);">
 						</li>
-						<li class="img-list-item">
+						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Sirena</p>
-							<p class="lead img-list-count">0</p>
+							<p class="lead img-list-count">5</p>
 							<img src="img/kittehtwo.jpg" id="img-two" alt="" onclick="imgSwap(this);">
 						</li>
-						<li class="img-list-item">
+						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Sammie</p>
-							<p class="lead img-list-count">0</p>
+							<p class="lead img-list-count">8</p>
 							<img src="img/kittehthree.jpg" id="img-three" alt="" onclick="imgSwap(this);">
 						</li>
-						<li class="img-list-item">
+						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Ninja</p>
-							<p class="lead img-list-count">0</p>
+							<p class="lead img-list-count">21</p>
 							<img src="img/kittehfour.jpg" id="img-four" alt="" onclick="imgSwap(this);">
 						</li>
-						<li class="img-list-item">
+						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Oliver</p>
-							<p class="lead img-list-count">0</p>
+							<p class="lead img-list-count">3</p>
 							<img src="img/kittehfive.jpg" id="img-five" alt="" onclick="imgSwap(this);">
 						</li>
 					</ul>
 				</div>
-				<div class="col-9 text-center img-display-div">
-					<h4 class="display-4 img-display-name">Ninja</h4>
-					<h4 class="display-4 img-display-count">0</h4>
+				<div class="col-9 text-center" id="img-display-div">
+					<h4 class="display-4" id="img-display-name">Tiger</h4>
+					<h4 class="display-4" id="img-display-count">0</h4>
 					<img src="img/kitteh.jpeg" class="img-display" id="img-display-id" alt="">
 				</div>
 			</div>
