Click function working for large img

--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
 						</li>
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Sirena</p>
-							<p class="lead img-list-count">5</p>
+							<p class="lead img-list-count">0</p>
 							<img src="img/kittehtwo.jpg" id="img-two" alt="" onclick="imgSwap(this);">
 						</li>
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Sammie</p>
-							<p class="lead img-list-count">8</p>
+							<p class="lead img-list-count">0</p>
 							<img src="img/kittehthree.jpg" id="img-three" alt="" onclick="imgSwap(this);">
 						</li>
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Ninja</p>
-							<p class="lead img-list-count">21</p>
+							<p class="lead img-list-count">0</p>
 							<img src="img/kittehfour.jpg" id="img-four" alt="" onclick="imgSwap(this);">
 						</li>
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Oliver</p>
-							<p class="lead img-list-count">3</p>
+							<p class="lead img-list-count"></p>
 							<img src="img/kittehfive.jpg" id="img-five" alt="" onclick="imgSwap(this);">
 						</li>
 					</ul>
