Changed img pick to for loop instead of function, and working on getting count to smaller image

--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
 					<ul class="img-list">
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Tiger</p>
-							<p class="lead img-list-count">0</p>
-							<img src="img/kitteh.jpeg" id="img-one" alt="" onclick="imgSwap(this);">
+							<p class="lead img-list-count" id="img-list-count-id">0</p>
+							<img src="img/kitteh.jpeg" class="img-small" id="img-one" alt="">
 						</li>
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Sirena</p>
-							<p class="lead img-list-count">0</p>
-							<img src="img/kittehtwo.jpg" id="img-two" alt="" onclick="imgSwap(this);">
+							<p class="lead img-list-count" id="img-list-count-id">0</p>
+							<img src="img/kittehtwo.jpg" class="img-small" id="img-two" alt="">
 						</li>
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Sammie</p>
-							<p class="lead img-list-count">0</p>
-							<img src="img/kittehthree.jpg" id="img-three" alt="" onclick="imgSwap(this);">
+							<p class="lead img-list-count" id="img-list-count-id">0</p>
+							<img src="img/kittehthree.jpg" class="img-small" id="img-three" alt="">
 						</li>
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Ninja</p>
-							<p class="lead img-list-count">0</p>
-							<img src="img/kittehfour.jpg" id="img-four" alt="" onclick="imgSwap(this);">
+							<p class="lead img-list-count" id="img-list-count-id">0</p>
+							<img src="img/kittehfour.jpg" class="img-small" id="img-four" alt="">
 						</li>
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Oliver</p>
-							<p class="lead img-list-count"></p>
-							<img src="img/kittehfive.jpg" id="img-five" alt="" onclick="imgSwap(this);">
+							<p class="lead img-list-count" id="img-list-count-id">0</p>
+							<img src="img/kittehfive.jpg" class="img-small" id="img-five" alt="">
 						</li>
 					</ul>
 				</div>
