--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
 					<ul class="img-list">
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Tiger</p>
-							<p class="lead img-list-count" id="img-list-count-id">0</p>
+							<p class="lead img-list-count" id="img-list-count-id-1">0</p>
 							<img src="img/kitteh.jpeg" class="img-small" id="img-one" alt="">
 						</li>
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Sirena</p>
-							<p class="lead img-list-count" id="img-list-count-id">0</p>
+							<p class="lead img-list-count" id="img-list-count-id-2">0</p>
 							<img src="img/kittehtwo.jpg" class="img-small" id="img-two" alt="">
 						</li>
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Sammie</p>
-							<p class="lead img-list-count" id="img-list-count-id">0</p>
+							<p class="lead img-list-count" id="img-list-count-id-3">0</p>
 							<img src="img/kittehthree.jpg" class="img-small" id="img-three" alt="">
 						</li>
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Ninja</p>
-							<p class="lead img-list-count" id="img-list-count-id">0</p>
+							<p class="lead img-list-count" id="img-list-count-id-4">0</p>
 							<img src="img/kittehfour.jpg" class="img-small" id="img-four" alt="">
 						</li>
 						<li class="img-list-item" id="img-list-id">
 							<p class="lead img-list-name">Oliver</p>
-							<p class="lead img-list-count" id="img-list-count-id">0</p>
+							<p class="lead img-list-count" id="img-list-count-id-5">0</p>
 							<img src="img/kittehfive.jpg" class="img-small" id="img-five" alt="">
 						</li>
 					</ul>
