--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
 					</ul>
 				</div>
 				<div class="col-9 text-center" id="img-display-div">
-					<h4 class="display-4" id="img-display-name">Tiger</h4>
-					<h4 class="display-4" id="img-display-count">0</h4>
-					<img src="img/kitteh.jpeg" class="img-display" id="img-display-id" alt="">
+					<h4 class="display-4" id="intro">Choose a kitteh, and click away!</h4>
+					<h4 class="display-4" id="img-display-name"></h4>
+					<h4 class="display-4" id="img-display-count"></h4>
+					<img src="" class="img-display" id="img-display-id" alt="">
 				</div>
 			</div>
 		</div>
